Fix credits spacing

--- a/site/evergrowth/evergrowth.css
+++ b/site/evergrowth/evergrowth.css
@@ -93,9 +93,9 @@ h2 {
   background-color:var(--preview-bg);
   font-size:0px;
 }
-.creator > p{
-margin: 0;
 
+.creator p {
+  margin: 0;
 }
 
 .small {
